--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Angulator - Angular Trading Calculator for Fixed Percent Risk Position Sizing</title>
+    <title>Trading Calculator for Fixed Percent Risk Position Sizing</title>
     <meta name="description" content="Free trading calculator for fixed percent risk position sizing.">
     <meta name="keywords" content="trading calculator fixed percent risk position sizing money management"/>
+    <meta name="google-site-verification" content="-x6IfJzlU8XsZBWNf0jcuhnisOJC8owoYMVXbva2qVw" />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
